force-app/main/default/objects/Shopping_List__c/Shopping_List__c.object-meta.xml
<CustomObject>
    <label>Shopping List</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Shopping List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shopping Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>