force-app/main/default/objects/Shopping_List__c/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <inlineHelpText>Actual amount spent at checkout</inlineHelpText>
    <label>Actual Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>