force-app/main/default/objects/Shopping_List__c/fields/Coupons_Applied_Count__c.field-meta.xml
<CustomField>
    <fullName>Coupons_Applied_Count__c</fullName>
    <inlineHelpText>Number of items with coupons available</inlineHelpText>
    <label>Coupons Applied Count</label>
    <summaryFilterItems>
        <field>Shopping_List_Item__c.Coupon_Available__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Shopping_List_Item__c.Shopping_List__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>