force-app/main/default/objects/Shopping_List__c/fields/Coupons_Available__c.field-meta.xml
<CustomField>
    <fullName>Coupons_Available__c</fullName>
    <label>Coupons Available</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>