force-app/main/default/objects/Shopping_List__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <inlineHelpText>Sum of estimated prices for all items on this shopping list</inlineHelpText>
    <label>Estimated Cost</label>
    <summarizedField>Shopping_List_Item__c.Estimated_Price__c</summarizedField>
    <summaryForeignKey>Shopping_List_Item__c.Shopping_List__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>