force-app/main/default/objects/Shopping_List__c/fields/Savings_Amount__c.field-meta.xml
<CustomField>
    <fullName>Savings_Amount__c</fullName>
    <formula>Estimated_Cost__c - Actual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total savings from coupons and deals</inlineHelpText>
    <label>Savings Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>