force-app/main/default/objects/Shopping_List__c/fields/Shopping_Date__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Date__c</fullName>
    <inlineHelpText>Planned date for shopping trip</inlineHelpText>
    <label>Shopping Date</label>
    <type>Date</type>
</CustomField>