force-app/main/default/objects/Shopping_List__c/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <inlineHelpText>Store address or location notes</inlineHelpText>
    <label>Store Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>