force-app/main/default/objects/Shopping_List__c/fields/Weekly_Meal_Plan__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Meal_Plan__c</fullName>
    <label>Weekly Meal Plan</label>
    <type>Lookup</type>
    <referenceTo>Weekly_Meal_Plan__c</referenceTo>
    <relationshipLabel>Shopping Lists</relationshipLabel>
    <relationshipName>Shopping_Lists</relationshipName>
</CustomField>