force-app/main/default/objects/Shopping_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Store__c</columns>
    <columns>Weekly_Meal_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>